src/fft2d_wrap.h

/* C interface */

void fft2d_create(MPI_Comm, int, void **);
void fft2d_destroy(void *);
void fft2d_set(void *, const char *, int);